week2/cafe-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: coffee.myweb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coffee-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tea-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: tea.myweb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tea-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: www.myweb.com
      http:
        paths:
          - path: /juice
            pathType: Prefix
            backend:
              service:
                name: juice-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: water-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: www.myweb.com
      http:
        paths:
          - path: /water
            pathType: Prefix
            backend:
              service:
                name: water-svc
                port:
                  number: 80
