week2/cafe-nginx-self-tls-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - coffee.myweb.com
      secretName: coffee-tls
  rules:
    - host: coffee.myweb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coffee-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tea-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tea.myweb.com
      secretName: tea-tls
  rules:
    - host: tea.myweb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tea-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.myweb.com
      secretName: www-juice-tls
  rules:
    - host: www.myweb.com
      http:
        paths:
          - path: /juice
            pathType: Prefix
            backend:
              service:
                name: juice-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: water-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.myweb.com
      secretName: www-water-tls
  rules:
    - host: www.myweb.com
      http:
        paths:
          - path: /water
            pathType: Prefix
            backend:
              service:
                name: water-svc
                port:
                  number: 80
